--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="person"
-            type="com.example.retrofitexample.Person" />
+            type="com.example.retrofitexample.data.model.Person" />
 
     </data>
 
@@ -22,7 +22,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp"
-        tools:context=".MainActivity">
+        tools:context=".presentation.view.MainActivity">
 
         <TextView
             android:id="@+id/tv_firstname"
